--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "recharts": "^2.1.10",
     "sass": "^1.52.1",
     "typescript": "^4.4.2",
+    "use-file-picker": "^1.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
